--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,7 +52,16 @@ body {
   height: 100%;
   justify-content: center;
   align-items: center;
-  gap: 50px;
+  gap: 10%;
+}
+
+.top .changeColor{
+  display: flex;
+  position: absolute;
+  right: 2.5vw;
+  height: 5%;
+  z-index: 2;
+  align-items: center;
 }
 
 
